positioned elements where needed, whitespace issue is present at the bottom of the document...

--- a/style.css
+++ b/style.css
@@ -32,11 +32,11 @@
 }
 html{
   margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 body {
   display: flex;
@@ -80,7 +80,7 @@ li {
   }
 /* Header */
 header {
-  /* position: relative; */
+  position: relative;
   /* left: 133px; */
   width: 100vw;
   height: 82px;
@@ -246,6 +246,9 @@ span[data-nav-span="account"] {
 .were-different h3 {
   font-size: 21px;
 }
+.were-different p {
+  line-height: 25px;
+}
 
 .selling-points {
   display: flex;
@@ -287,6 +290,7 @@ footer {
   height: 350px;
   width: 1440px;
   position: relative;
+  background-color: var(--Very-Light-Gray);
 }
 .footer-head {
   display: flex;
@@ -332,6 +336,7 @@ footer .s-media-links span {
 .footer-links section ul {
   width: 113px;
   margin-right: 175px;
+
 }
 .footer-links section ul a {
   font-weight: var(--Body-Font-Weight-1);
@@ -379,9 +384,11 @@ footer .s-media-links span {
     width: 375px;
     height: 3851px;
   } */
+
   /* Hidden Elements */
   .intro-bg, header nav, .intro hr{
       display: none;
+      height: 0;
     }
   html, body, header,.container,.container section,section>*, footer{
     flex-direction: column;
@@ -390,25 +397,31 @@ footer .s-media-links span {
     margin: 0;
     /* height: 3851px; */
   }
+
+  body{
+    height: 2755px;
+  }
   /* Header */
-  /* header{
-    
-  } */
+  header{
+   position: relative;
+   top: 209px;
+  }
   header figure{
     left:0px
   }
   .container{
-    height: 2712px;
+    /* height: 2500px; */
+    height: 3000px;
     position: relative;
-    /* top: -108px; */
-    bottom: 108px;
+    top: 116px;
+    /* bottom: 0; */
   }
   /* Section */
-  .container>section{
+  .container> section{
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
+    /* position: relative; */
     /* top: auto; */
     margin: 0 auto;
   }
@@ -419,9 +432,10 @@ footer .s-media-links span {
     position: relative;
     left: 69px;
     height: 500px;
-    width: 375px;
+    width: 378px;
     background-color: var(--Dark-Violet);
     text-align: center;
+    top: 450px;
   }
   .intro div h1{
     width: 338px;
@@ -442,6 +456,8 @@ footer .s-media-links span {
   }
   .intro img{
     /* 540px x 651px */
+    position: relative;
+    bottom: 500px;
     height: 452px;
     width: 375px;
     left: 68px;
@@ -449,7 +465,7 @@ footer .s-media-links span {
   /* TODO adjust sizing of were-different till it's able to  */
   .were-different{
     height: 940px;
-    width: 326px;
+    width: 326px !important;
     flex-direction: column;
   }
   .were-different hr{
@@ -497,9 +513,9 @@ footer .s-media-links span {
   }
   .find-out-more{
     position: relative;
-    top: 387px;
+    top: 460px;
     height: 343px;
-    width: 327px;
+    width:326px !important;
     text-align: center;
   }
   .find-out-more h1{
@@ -519,9 +535,12 @@ footer .s-media-links span {
   footer{
     display: flex;
     flex-direction: column;
-    height: 734px;
-    bottom: 149px;
-    position: relative;
+    height: 879px;
+    /* height: 890px; */
+    /* bottom: 149px; */
+    top: 596px;
+    /* bottom: 0px; */
+    /* position: relative; */
   }
   footer hr{
   position: relative;
@@ -529,7 +548,6 @@ footer .s-media-links span {
   }
   .footer-head{
     height: 44px;
-    /* width: 375px; */
     width: 205px;
     flex-direction: column;
     justify-content: flex-start;
@@ -565,11 +583,30 @@ footer .s-media-links span {
     position: relative;
     top: 86px;
     width: 205px;
+    /* height: 660px; */
   }
   .footer-links section{
     text-align: center;
+    height: 180px;
+    /* margin-bottom: 10px; */
   }
   .footer-links section h4{
     width: auto;
+  }
+  .footer-links section ul{
+   position: relative;
+   top:10px;
+   
+  }
+   li{
+    /* margin-bottom: 20px; */
+    position: relative;
+    top: 20px;
+  }
+  .attribution{
+    position: relative;
+    top: 617px;
+    /* bottom: 5px; */
+    margin: 0px;
   }
 }
